--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
         "jwt-decode": "^3.1.2",
+        "lodash.clonedeep": "^4.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.2",
