--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "framer-motion": "^6.3.16",
         "jwt-decode": "^3.1.2",
         "lodash.clonedeep": "^4.5.0",
+        "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.2",
