--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "recharts": "^2.1.16",
         "sass": "^1.54.0",
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11"
